# PanDDA2Tests

./: .gitignore  README.md  pyproject.toml
tests/: test_cnn.py  test_pandda.py
