[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pandda_2_gemmi_tests"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
]
description = "Tools to generate data suitable for loading into Fragalysis"
dependencies = [
    "numpy<2.0",
    "scipy",
    "joblib",
    "scikit-learn",
    "umap-learn",
    "hdbscan",
    "matplotlib",
    "rich",
    "seaborn",
    "rdkit",
    "ray",
    "fire",
    "bokeh",
#    "dask",
#    "dask-jobqueue",
    "gdown",
    "torch==1.13.1",
    "pytorch-lightning",
    'scikit-image',
    'gemmi'
    "pandda_gemmi@git+https://github.com/xchem/PanDDA2.git"
] # Add project dependencies here, e.g. ["click", "numpy"]
dynamic = ["version"]
license.file = "LICENSE"
readme = "README.md"
requires-python = ">=3.9"

#[project.optional-dependencies]
#intel = ["scikit-learn-intelex",]

[tool.pytest.ini_options]
addopts = "-x"
testpaths = ['tests']

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cpu"]